force-app/main/default/objects/Lead/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <label>Agency Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>