force-app/main/default/objects/Lead/fields/Agent_Company__c.field-meta.xml
<CustomField>
    <fullName>Agent_Company__c</fullName>
    <label>Agent Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>