force-app/main/default/objects/Lead/fields/Client_Country__c.field-meta.xml
<CustomField>
    <fullName>Client_Country__c</fullName>
    <formula>MID(
    Client_Location__c, 
    FIND(&apos;&quot;country&quot;:&quot;&apos;, Client_Location__c) + 11, 
    FIND(&apos;&quot;&apos;, Client_Location__c, FIND(&apos;&quot;country&quot;:&quot;&apos;, Client_Location__c) + 11) - (FIND(&apos;&quot;country&quot;:&quot;&apos;, Client_Location__c) + 11)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Country</label>
    <type>Text</type>
</CustomField>