force-app/main/default/objects/Lead/fields/Client_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Country_Name__c</fullName>
    <formula>MID(
    Client_Location__c, 
    FIND(&apos;&quot;country_name&quot;:&quot;&apos;, Client_Location__c) + 16, 
    FIND(&apos;&quot;&apos;, Client_Location__c, FIND(&apos;&quot;country_name&quot;:&quot;&apos;, Client_Location__c) + 16) - (FIND(&apos;&quot;country_name&quot;:&quot;&apos;, Client_Location__c) + 16)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Country Name</label>
    <type>Text</type>
</CustomField>