force-app/main/default/objects/Lead/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M I R A DEVELOPMENTS LLC</fullName>
            </value>
            <value>
                <fullName>M I R A REAL ESTATE BROKERS LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>