force-app/main/default/objects/Lead/fields/External_Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>External_Agent_Phone__c</fullName>
    <label>External Agent Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>