force-app/main/default/objects/Lead/fields/Funnel_Type__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Type__c</fullName>
    <label>Funnel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>