force-app/main/default/objects/Lead/fields/Language_of_Client__c.field-meta.xml
<CustomField>
    <fullName>Language_of_Client__c</fullName>
    <label>Language of Client</label>
    <length>50</length>
    <type>Text</type>
</CustomField>