force-app/main/default/objects/Lead/fields/Lead_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assigned_At__c</fullName>
    <formula>IF(
   NOT(ISBLANK(Lead_Assignment_Date__c)),
   Lead_Assignment_Date__c,
   DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Assigned At</label>
    <type>Date</type>
</CustomField>