force-app/main/default/objects/Lead/fields/Lead_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assignment_Date__c</fullName>
    <label>Lead Assignment Date</label>
    <type>Date</type>
</CustomField>