force-app/main/default/objects/Lead/fields/Lead_Assignment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assignment_Duration__c</fullName>
    <formula>IF(
   ISPICKVAL(Status, &quot;Unqualified&quot;),
   &quot;Days until Unqualified - &quot; &amp; TEXT(Lead_Unqualified_Date__c - Lead_Assigned_At__c),
   &quot;Days passed since Assignment - &quot; &amp; TEXT(TODAY() - Lead_Assigned_At__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Assignment Duration</label>
    <type>Text</type>
</CustomField>