force-app/main/default/objects/Lead/fields/Lead_Source_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Marketing__c</fullName>
    <formula>IF(
    CONTAINS(UTM__c, &quot;utm_source=adwords&quot;),
    &quot;Adwords&quot;,
    IF(
        CONTAINS(UTM__c, &quot;utm_medium=organic&quot;),
        &quot;SEO&quot;,
        IF(
            NOT(CONTAINS(UTM__c, &quot;utm_&quot;)),
            &quot;Social Media&quot;,
            &quot;Other&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source Marketing</label>
    <type>Text</type>
</CustomField>