force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GDN</fullName>
            </value>
            <value>
                <fullName>pMax</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>DemandGen</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Social Organic</fullName>
            </value>
            <value>
                <fullName>Paid Ads</fullName>
            </value>
            <value>
                <fullName>Bing SEO</fullName>
            </value>
            <value>
                <fullName>DuckDuckGo SEO</fullName>
            </value>
            <value>
                <fullName>Rambler SEO</fullName>
            </value>
            <value>
                <fullName>Google SEO</fullName>
            </value>
            <value>
                <fullName>Yahoo SEO</fullName>
            </value>
            <value>
                <fullName>Mail.ru SEO</fullName>
            </value>
            <value>
                <fullName>Yandex SEO</fullName>
            </value>
            <value>
                <fullName>2GIS Maps</fullName>
            </value>
            <value>
                <fullName>Google Maps</fullName>
            </value>
            <value>
                <fullName>direct</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>