force-app/main/default/objects/Lead/fields/Lead_Unqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Unqualified_Date__c</fullName>
    <label>Lead Unqualified Date</label>
    <type>Date</type>
</CustomField>