force-app/main/default/objects/Lead/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>