force-app/main/default/objects/Lead/fields/MIRA_RM__c.field-meta.xml
<CustomField>
    <fullName>MIRA_RM__c</fullName>
    <label>MIRA RM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>