force-app/main/default/objects/Lead/fields/MIRA_Stand_Admin__c.field-meta.xml
<CustomField>
    <fullName>MIRA_Stand_Admin__c</fullName>
    <label>MIRA Stand Admin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>