force-app/main/default/objects/Lead/fields/Name_From_Web__c.field-meta.xml
<CustomField>
    <fullName>Name_From_Web__c</fullName>
    <formula>HYPERLINK(
&quot;https://miradevelopments.lightning.force.com/lightning/r/&quot;&amp;Id&amp;&quot;/view&quot;,
FirstName,
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>