force-app/main/default/objects/Lead/fields/Page_Language__c.field-meta.xml
<CustomField>
    <fullName>Page_Language__c</fullName>
    <label>Page Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>