force-app/main/default/objects/Lead/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>