force-app/main/default/objects/Lead/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIRA Villas Designed by Bentley Home</fullName>
            </value>
            <value>
                <fullName>Trussardi Residences</fullName>
            </value>
            <value>
                <fullName>Trussardi Residences Phase 2</fullName>
            </value>
            <value>
                <fullName>POST HOTEL &amp; RESIDENCES By ELIE SAAB</fullName>
            </value>
            <value>
                <fullName>MIRA Bentley Home</fullName>
                <isActive>false</isActive>
                <label>MIRA Bentley Home</label>
            </value>
            <value>
                <fullName>MIRA Trussardi</fullName>
                <isActive>false</isActive>
                <label>MIRA Trussardi</label>
            </value>
            <value>
                <fullName>MIRA Trussardi Coming Soon</fullName>
                <isActive>false</isActive>
                <label>MIRA Trussardi Coming Soon</label>
            </value>
            <value>
                <fullName>MIRA Trussardi Residences</fullName>
                <isActive>false</isActive>
                <label>MIRA Trussardi Residences</label>
            </value>
            <value>
                <fullName>MIRA Villas Bentley Home</fullName>
                <isActive>false</isActive>
                <label>MIRA Villas Bentley Home</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>