force-app/main/default/objects/Lead/fields/Project_Has_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Has_Value__c</fullName>
    <formula>NOT(ISBLANK(TEXT( Project__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Has Value</label>
    <type>Checkbox</type>
</CustomField>