force-app/main/default/objects/Lead/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Name</label>
    <type>Text</type>
</CustomField>