force-app/main/default/objects/Lead/fields/Type_Has_Value__c.field-meta.xml
<CustomField>
    <fullName>Type_Has_Value__c</fullName>
    <formula>NOT(ISBLANK(TEXT( Type__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Has Value</label>
    <type>Checkbox</type>
</CustomField>