force-app/main/default/objects/Lead/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Units</valueSetName>
    </valueSet>
</CustomField>