force-app/main/default/objects/Lead/fields/Unit_Has_Value__c.field-meta.xml
<CustomField>
    <fullName>Unit_Has_Value__c</fullName>
    <formula>NOT(ISBLANK(TEXT( Unit__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Has Value</label>
    <type>Checkbox</type>
</CustomField>