force-app/main/default/objects/Lead/fields/URL_of_Application__c.field-meta.xml
<CustomField>
    <fullName>URL_of_Application__c</fullName>
    <label>URL of Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>