force-app/main/default/objects/Lead/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <formula>IF(
    CONTAINS(UTM__c, &quot;utm_campaign=&quot;),
    MID(
        UTM__c,
        FIND(&quot;utm_campaign=&quot;, UTM__c) + LEN(&quot;utm_campaign=&quot;),
        FIND(&quot;&amp;&quot;, UTM__c + &quot;&amp;&quot;, FIND(&quot;utm_campaign=&quot;, UTM__c)) - FIND(&quot;utm_campaign=&quot;, UTM__c) - LEN(&quot;utm_campaign=&quot;)
    ),
    &quot;No Campaign&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Campaign</label>
    <type>Text</type>
</CustomField>