force-app/main/default/objects/Lead/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <formula>IF(
CONTAINS(UTM__c, &quot;utm_medium=&quot;),
MID(
UTM__c,
FIND(&quot;utm_medium=&quot;, UTM__c) + LEN(&quot;utm_medium=&quot;),
FIND(&quot;&amp;&quot;, UTM__c + &quot;&amp;&quot;, FIND(&quot;utm_medium=&quot;, UTM__c)) - FIND(&quot;utm_medium=&quot;, UTM__c) - LEN(&quot;utm_medium=&quot;)
),
&quot;No Medium&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Medium</label>
    <type>Text</type>
</CustomField>