force-app/main/default/objects/Lead/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <formula>IF(
    CONTAINS(UTM__c, &quot;utm_source=&quot;),
    MID(
        UTM__c,
        FIND(&quot;utm_source=&quot;, UTM__c) + LEN(&quot;utm_source=&quot;),
        FIND(&quot;&amp;&quot;, UTM__c + &quot;&amp;&quot;, FIND(&quot;utm_source=&quot;, UTM__c)) - FIND(&quot;utm_source=&quot;, UTM__c) - LEN(&quot;utm_source=&quot;)
    ),
    &quot;No Source&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Source</label>
    <type>Text</type>
</CustomField>