force-app/main/default/objects/Lead/recordTypes/Funnel_Type_Database.recordType-meta.xml
<RecordType>
    <fullName>Funnel_Type_Database</fullName>
    <active>true</active>
    <businessProcess>Database Process</businessProcess>
    <label>Funnel Type Database</label>
</RecordType>