force-app/main/default/objects/Lead/recordTypes/Master_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Master_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Master Process</businessProcess>
    <label>Master Record Type</label>
</RecordType>