force-app/main/default/objects/Lead/listViews/All_Test_Leads.listView-meta.xml
<ListView>
    <fullName>All_Test_Leads</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6)</booleanFilter>
    <columns>Name_From_Web__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Client_City__c</columns>
    <columns>Client_Region__c</columns>
    <columns>Client_Country__c</columns>
    <columns>Client_Location__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>UTM__c</columns>
    <columns>UTM_Source__c</columns>
    <columns>UTM_Campaign__c</columns>
    <columns>UTM_Medium__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <filters>
        <field>Name_From_Web__c</field>
        <operation>contains</operation>
        <value>TEST</value>
    </filters>
    <filters>
        <field>Name_From_Web__c</field>
        <operation>contains</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>Name_From_Web__c</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>Name_From_Web__c</field>
        <operation>contains</operation>
        <value>sample</value>
    </filters>
    <filters>
        <field>Name_From_Web__c</field>
        <operation>contains</operation>
        <value>Sample</value>
    </filters>
    <label>All Test Leads</label>
    <sharedTo>
        <role>Content_Manager</role>
    </sharedTo>
</ListView>