force-app/main/default/objects/Lead/listViews/Hot_Leads.listView-meta.xml
<ListView>
    <fullName>Hot_Leads</fullName>
    <columns>Name_From_Web__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Client_City__c</columns>
    <columns>Client_Region__c</columns>
    <columns>Client_Country__c</columns>
    <columns>Client_Location__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>UTM__c</columns>
    <columns>UTM_Source__c</columns>
    <columns>UTM_Campaign__c</columns>
    <columns>UTM_Medium__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <label>Hot Leads</label>
</ListView>